// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`titresEtapesAreasUpdate > met à jour les communes, forêts et zone du SDOM sur une étape 1`] = `
[
  {
    "administrationsLocales": [],
    "archive": false,
    "communes": [
      {
        "id": "97312",
        "surface": 716357,
      },
      {
        "id": "97358",
        "surface": 292012,
      },
    ],
    "contenu": null,
    "date": "2022-03-09",
    "dateDebut": null,
    "dateFin": null,
    "decisionsAnnexesContenu": null,
    "decisionsAnnexesSections": null,
    "duree": null,
    "forets": [
      "DBR",
    ],
    "geojson4326Perimetre": {
      "geometry": {
        "coordinates": [
          [
            [
              [
                -53.16822754488772,
                5.02935254143807,
              ],
              [
                -53.15913163720232,
                5.029382753429523,
              ],
              [
                -53.15910186841349,
                5.020342601941031,
              ],
              [
                -53.168197650929095,
                5.02031244452273,
              ],
              [
                -53.16822754488772,
                5.02935254143807,
              ],
            ],
          ],
        ],
        "type": "MultiPolygon",
      },
      "properties": {},
      "type": "Feature",
    },
    "geojson4326Points": null,
    "geojsonOrigineGeoSystemeId": "4326",
    "geojsonOriginePerimetre": {
      "geometry": {
        "coordinates": [
          [
            [
              [
                -53.16822754488772,
                5.02935254143807,
              ],
              [
                -53.15913163720232,
                5.029382753429523,
              ],
              [
                -53.15910186841349,
                5.020342601941031,
              ],
              [
                -53.168197650929095,
                5.02031244452273,
              ],
              [
                -53.16822754488772,
                5.02935254143807,
              ],
            ],
          ],
        ],
        "type": "MultiPolygon",
      },
      "properties": {},
      "type": "Feature",
    },
    "geojsonOriginePoints": null,
    "heritageContenu": null,
    "heritageProps": null,
    "id": "titreEtapeIdUniquePourMiseAJourAreas",
    "notes": null,
    "ordre": 0,
    "sdomZones": [
      "1",
    ],
    "secteursMaritime": [],
    "slug": "titreDemarcheIdUniquePourMiseAJourAreas-mfr99",
    "statutId": "aco",
    "substances": [],
    "surface": null,
    "titreDemarcheId": "titreDemarcheIdUniquePourMiseAJourAreas",
    "typeId": "mfr",
  },
]
`;

exports[`titresEtapesAreasUpdate > met à jour les communes, forêts et zone du SDOM sur une étape 2`] = `
[
  {
    "administrationsLocales": [],
    "archive": false,
    "communes": [
      {
        "id": "97312",
        "surface": 716357,
      },
      {
        "id": "97358",
        "surface": 292012,
      },
    ],
    "doublonTitreId": null,
    "forets": [
      "DBR",
    ],
    "id": "titreIdUniquePourMiseAJourAreas",
    "nom": "nom-titreIdUniquePourMiseAJourAreas",
    "pointsEtape": {
      "administrationsLocales": [],
      "archive": false,
      "communes": [
        {
          "id": "97312",
          "surface": 716357,
        },
        {
          "id": "97358",
          "surface": 292012,
        },
      ],
      "contenu": null,
      "date": "2022-03-09",
      "dateDebut": null,
      "dateFin": null,
      "decisionsAnnexesContenu": null,
      "decisionsAnnexesSections": null,
      "duree": null,
      "forets": [
        "DBR",
      ],
      "geojson4326Perimetre": {
        "geometry": {
          "coordinates": [
            [
              [
                [
                  -53.16822754488772,
                  5.02935254143807,
                ],
                [
                  -53.15913163720232,
                  5.029382753429523,
                ],
                [
                  -53.15910186841349,
                  5.020342601941031,
                ],
                [
                  -53.168197650929095,
                  5.02031244452273,
                ],
                [
                  -53.16822754488772,
                  5.02935254143807,
                ],
              ],
            ],
          ],
          "type": "MultiPolygon",
        },
        "properties": {},
        "type": "Feature",
      },
      "geojson4326Points": null,
      "geojsonOrigineGeoSystemeId": "4326",
      "geojsonOriginePerimetre": {
        "geometry": {
          "coordinates": [
            [
              [
                [
                  -53.16822754488772,
                  5.02935254143807,
                ],
                [
                  -53.15913163720232,
                  5.029382753429523,
                ],
                [
                  -53.15910186841349,
                  5.020342601941031,
                ],
                [
                  -53.168197650929095,
                  5.02031244452273,
                ],
                [
                  -53.16822754488772,
                  5.02935254143807,
                ],
              ],
            ],
          ],
          "type": "MultiPolygon",
        },
        "properties": {},
        "type": "Feature",
      },
      "geojsonOriginePoints": null,
      "heritageContenu": null,
      "heritageProps": null,
      "id": "titreEtapeIdUniquePourMiseAJourAreas",
      "notes": null,
      "ordre": 0,
      "sdomZones": [
        "1",
      ],
      "secteursMaritime": [],
      "slug": "titreDemarcheIdUniquePourMiseAJourAreas-mfr99",
      "statutId": "aco",
      "substances": [],
      "surface": null,
      "titreDemarcheId": "titreDemarcheIdUniquePourMiseAJourAreas",
      "typeId": "mfr",
    },
    "propsTitreEtapesIds": {
      "points": "titreEtapeIdUniquePourMiseAJourAreas",
    },
    "publicLecture": false,
    "references": [],
    "sdomZones": [
      "1",
    ],
    "secteursMaritime": [],
    "slug": "slug-titreIdUniquePourMiseAJourAreas",
    "titreStatutId": "val",
    "typeId": "arm",
  },
]
`;
